@@ -373,7 +373,7 @@ ROM_START(spcpnthr)
   NORMALREGION(0x10000, REGION_CPU1)
     ROM_LOAD("sp_game.bin", 0x0000, 0x8000, CRC(0428563c) SHA1(45b9daf12f8384101450f1e529491812f73d88bd))
   NORMALREGION(0x10000, REGION_USER1)
-    ROM_LOAD("sp_sound.bin", 0x0000, 0x8000, CRC(d7aedbac) SHA1(4b59028e08b2d7ff8f19596022ba6e830cf736e2))
+    ROM_LOAD("mac_snd.bin", 0x0000, 0x8000, CRC(d7aedbac) SHA1(4b59028e08b2d7ff8f19596022ba6e830cf736e2))
 ROM_END
 INITGAME(spcpnthr,dispMAC,FLIP_SW(FLIP_L),2)
 MAC_COMPORTS(spcpnthr, 1)
@@ -383,17 +383,27 @@ ROM_START(mac_1808)
   NORMALREGION(0x10000, REGION_CPU1)
     ROM_LOAD("mac_1808.cpu", 0x0000, 0x8000, CRC(29126585) SHA1(b24c4f0f17f3ef7de5348cb06ec3b305c6ca7373))
   NORMALREGION(0x10000, REGION_USER1)
-    ROM_LOAD("mac_1808.snd", 0x0000, 0x8000, CRC(d7aedbac) SHA1(4b59028e08b2d7ff8f19596022ba6e830cf736e2))
+    ROM_LOAD("mac_snd.bin", 0x0000, 0x8000, CRC(d7aedbac) SHA1(4b59028e08b2d7ff8f19596022ba6e830cf736e2))
 ROM_END
 INITGAME(mac_1808,dispMAC,FLIP_SW(FLIP_L),2)
 MAC_COMPORTS(mac_1808, 1)
 CORE_GAMEDEFNV(mac_1808, "Unknown Game (MAC #1808)", 19??, "MAC S.A.", macmsm, 0)
 
+ROM_START(macjungn)
+  NORMALREGION(0x10000, REGION_CPU1)
+    ROM_LOAD("juego1.bin", 0x0000, 0x8000, CRC(0b2d9b64) SHA1(22602b79c8b178793b447783bca59dcb49e4525f))
+  NORMALREGION(0x10000, REGION_USER1)
+    ROM_LOAD("mac_snd.bin", 0x0000, 0x8000, CRC(d7aedbac) SHA1(4b59028e08b2d7ff8f19596022ba6e830cf736e2))
+ROM_END
+INITGAME(macjungn,dispMAC,FLIP_SW(FLIP_L),2)
+MAC_COMPORTS(macjungn, 1)
+CORE_GAMEDEFNV(macjungn, "MAC Jungle (New version)", 1995, "MAC S.A.", macmsm, 0)
+
 ROM_START(nbamac)
   NORMALREGION(0x10000, REGION_CPU1)
     ROM_LOAD("nba_mac.cpu", 0x0000, 0x8000, CRC(0c430988) SHA1(71126d9caf10ac27056b8bf28d300775062dc693))
   NORMALREGION(0x10000, REGION_USER1)
-    ROM_LOAD("nba_mac.snd", 0x0000, 0x8000, CRC(d7aedbac) SHA1(4b59028e08b2d7ff8f19596022ba6e830cf736e2))
+    ROM_LOAD("mac_snd.bin", 0x0000, 0x8000, CRC(d7aedbac) SHA1(4b59028e08b2d7ff8f19596022ba6e830cf736e2))
 ROM_END
 INITGAME(nbamac,dispMAC,FLIP_SW(FLIP_L),2)
 MAC_COMPORTS(nbamac, 1)
