@@ -29,6 +29,17 @@ SLEIC_ROMSTART7(bikerace,	"bkdsp01.bin", CRC(9b220fcb) SHA1(54e82705d8ce8a26d9e1
 SLEIC_ROMEND
 CORE_GAMEDEFNV(bikerace,"Bike Race",1992,"Sleic (Spain)",gl_mSLEIC3,GAME_NOT_WORKING)
 
+INITGAME(bikerac2, sleic_dispDMD, 1)
+SLEIC_ROMSTART7(bikerac2,	"bkdsp01.bin", CRC(9b220fcb) SHA1(54e82705d8ce8a26d9e1b5f0fe382ded1f2070c3),
+						"bksnd02.bin", CRC(d67b3883) SHA1(712022b9b24c6ab559d020ab8e2106f68b4d7896),
+						"bksnd03.bin", CRC(b6d00245) SHA1(f7da6f2ca681fbe62ea9cab7f92d3e501b7e867d),
+						"04.bin",      CRC(aaaa4a8a) SHA1(ff579041575da4060615da2ff634f3aa91537751),
+						"bkcpu05.bin", CRC(072ce879) SHA1(4f6fb044592feb4c72bbdcbe5f19e063c0e49d0d),
+						"bkcpu06.bin", CRC(9db436d4) SHA1(3869524c0490e0a019d2f8ab46546ff42727665e),
+						"07.bin",      CRC(0b763a89) SHA1(8952d7b13674e1599e53cce96e57c2783899a90a))
+SLEIC_ROMEND
+CORE_CLONEDEFNV(bikerac2,bikerace,"Bike Race (2-ball play)",1992,"Sleic (Spain)",gl_mSLEIC3,GAME_NOT_WORKING)
+
 /*-------------------------------------------------------------------
 / Pin-Ball (1993)
 /-------------------------------------------------------------------*/
